--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <div id="app">
+    <div id="app" class="container ">
         <header>
             <div class="text-center m-3 d-flex flex-column  justify-content-center align-items-center ">
                 <h1>Posti Da Vedere</h1>
@@ -44,8 +44,8 @@
             </ul>
             <!-- Form for add elements -->
             <div class="my-3 p-3">
-                <label for="add" class="form-label">Aggiungi Elemento</label>
-                <input type="text" class="form-control" id="add" v-model="nCity" @keyup.enter="addItem">
+                <label for="add" class="form-label fs-3">Aggiungi Elemento</label>
+                <input type="text" class="form-control  " id="add" v-model="nCity" @keyup.enter="addItem">
                 <button class="btn btn-secondary  my-2 " @click="addItem">Aggiungi</button>
             </div>
         </main>
